--- a/rollup/core/classes/RollupQueryBuilder.cls
+++ b/rollup/core/classes/RollupQueryBuilder.cls
@@ -91,13 +91,13 @@ public without sharing class RollupQueryBuilder {
   private String adjustWhereClauseForPolymorphicFields(SObjectType sObjectType, List<String> uniqueQueryFieldNames, String optionalWhereClause) {
     // you can't filter on *.Owner for polymorphic fields - or even select them, for that matter. Instead we have to massage the query to use
     // TYPEOF instead
-    if (String.isBlank(optionalWhereClause) || this.hasPolymorphicOwnerClause(optionalWhereClause) == false) {
+    if (this.hasPolymorphicOwnerClause(optionalWhereClause) == false || uniqueQueryFieldNames.contains('Count()')) {
       return optionalWhereClause;
     }
     RollupEvaluator.WhereFieldEvaluator whereEval = RollupEvaluator.getWhereEval(optionalWhereClause, sObjectType);
     try {
       for (String whereClause : whereEval.getWhereClauses()) {
-        if (this.hasPolymorphicOwnerClause(whereClause) == false || uniqueQueryFieldNames.contains('Count()')) {
+        if (this.hasPolymorphicOwnerClause(whereClause) == false) {
           continue;
         }
         String fieldName = whereClause.split(' ')[0];
@@ -111,6 +111,9 @@ public without sharing class RollupQueryBuilder {
 
         optionalWhereClause = optionalWhereClause.replace(indexer + relationshipName + '\'', '').trim();
         optionalWhereClause = optionalWhereClause.replace(whereClause, '').trim();
+        while (optionalWhereClause.startsWith('(') && optionalWhereClause.countMatches('(') >= optionalWhereClause.countMatches(')')) {
+          optionalWhereClause = optionalWhereClause.removeStart('(');
+        }
       }
     } catch (Exception ex) {
       RollupLogger.Instance.log('exception occurred while building query: ', ex, LoggingLevel.WARN);
@@ -119,6 +122,6 @@ public without sharing class RollupQueryBuilder {
   }
 
   private Boolean hasPolymorphicOwnerClause(String whereClause) {
-    return whereClause.contains('.Owner');
+    return whereClause?.contains('.Owner') == true;
   }
 }
