--- a/extra-tests/classes/RollupQueryBuilderTests.cls
+++ b/extra-tests/classes/RollupQueryBuilderTests.cls
@@ -39,16 +39,28 @@ private class RollupQueryBuilderTests {
 
   @IsTest
   static void shouldNotBlowUpIfPassedInFieldsAreNullOrBlank() {
-    String queryString = RollupQueryBuilder.Current.getQuery(
-      Opportunity.SObjectType,
-      new List<String>{ '', null, ' ', 'Id'},
-      'AccountId',
-      '='
-    );
+    String queryString = RollupQueryBuilder.Current.getQuery(Opportunity.SObjectType, new List<String>{ '', null, ' ', 'Id' }, 'AccountId', '=');
 
     Set<String> objIds = new Set<String>();
     Database.query(queryString);
 
     System.assertEquals(true, queryString.contains('Id'));
+  }
+
+  @IsTest
+  static void shouldHandleNestedWhereClauses() {
+    String queryString = RollupQueryBuilder.Current.getQuery(
+      Event.SObjectType,
+      new List<String>{ 'Subject', 'WhatId' },
+      Event.WhatId.getDescribe().getName(),
+      '!=',
+      '((What.Type = \'Account\') AND What.Owner.Id = :recordIds)'
+    );
+
+    System.assertEquals(true, queryString.contains('TYPEOF'), 'Polymorphic where clause should have been transformed: ' + queryString);
+    System.assertEquals(false, queryString.contains('What.Owner.Id'));
+    System.assertEquals(false, queryString.contains('()'), 'Should clean up removed nested conditionals: ' + queryString);
+    System.assertEquals(false, queryString.contains('AND  AND '), queryString);
+    System.assertEquals(true, queryString.contains('What.Type = \'Account\''), queryString);
   }
 }
