Incorporating code review feedback from @jongpie - removed unncessary boolean in 'matches' evaluation for RollupEvaluator, made RollupQueryBuilder's 'adjustWhereClauseForPolymorphicFields' safer by checking whether or not an object's OwnerId field is polymorphic to begin with. Updated test method name in RollupCalculatorTests to accurately reflect the problem statement of unfilterable fields

--- a/rollup/core/classes/RollupQueryBuilder.cls
+++ b/rollup/core/classes/RollupQueryBuilder.cls
@@ -122,7 +122,7 @@ public without sharing class RollupQueryBuilder {
         optionalWhereClause = optionalWhereClause.replace('()', '');
       }
     } catch (Exception ex) {
-      RollupLogger.Instance.log('exception occurred while building query: ', ex, LoggingLevel.WARN);
+      RollupLogger.Instance.log('exception occurred while converting polymorphic where clause: ', ex, LoggingLevel.WARN);
     }
     return optionalWhereClause;
   }
